[gd_scene load_steps=13 format=3 uid="uid://b6wd4qe8663bt"]

[ext_resource type="Script" path="res://piece.gd" id="1_nribt"]
[ext_resource type="Texture2D" uid="uid://cp060flvstvgl" path="res://resources/Chess_klt45.svg" id="2_vf2i6"]
[ext_resource type="Texture2D" uid="uid://lc6ooek5ktra" path="res://resources/Chess_rlt45.svg" id="3_3gjsx"]
[ext_resource type="Texture2D" uid="uid://p6plwhwe7d8y" path="res://resources/Chess_blt45.svg" id="4_hyig3"]
[ext_resource type="Texture2D" uid="uid://3wu6iwsal0bk" path="res://resources/Chess_plt45.svg" id="5_j8aiq"]
[ext_resource type="Texture2D" uid="uid://dsw5c2exrx828" path="res://resources/Chess_nlt45.svg" id="6_3qa0q"]
[ext_resource type="Texture2D" uid="uid://gjtim4cofb50" path="res://resources/Chess_kdt45.svg" id="7_njoyb"]
[ext_resource type="Texture2D" uid="uid://drr2v1nw64vb8" path="res://resources/Chess_rdt45.svg" id="8_7lh4v"]
[ext_resource type="Texture2D" uid="uid://bbi38qfnyfitb" path="res://resources/Chess_bdt45.svg" id="9_enpl1"]
[ext_resource type="Texture2D" uid="uid://b58rat5eya14q" path="res://resources/Chess_pdt45.svg" id="10_05rro"]
[ext_resource type="Texture2D" uid="uid://d2h2f0rq3i0pa" path="res://resources/Chess_ndt45.svg" id="11_3uwib"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lekxf"]

[node name="Piece" type="Area2D"]
script = ExtResource("1_nribt")
piece_type = "King"
color = "White"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(50, 50)
scale = Vector2(4.5, 4.5)
shape = SubResource("RectangleShape2D_lekxf")

[node name="King" type="TextureRect" parent="."]
visible = false
offset_right = 45.0
offset_bottom = 45.0
scale = Vector2(2.222, 2.222)
texture = ExtResource("2_vf2i6")

[node name="Rook" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2.222, 2.222)
texture = ExtResource("3_3gjsx")

[node name="Bishop" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2.222, 2.222)
texture = ExtResource("4_hyig3")

[node name="Pawn" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2.222, 2.222)
texture = ExtResource("5_j8aiq")

[node name="Knight" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2.222, 2.222)
texture = ExtResource("6_3qa0q")

[node name="KingDark" type="TextureRect" parent="."]
visible = false
offset_right = 45.0
offset_bottom = 45.0
scale = Vector2(2.222, 2.222)
texture = ExtResource("7_njoyb")

[node name="RookDark" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2.222, 2.222)
texture = ExtResource("8_7lh4v")

[node name="BishopDark" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2.222, 2.222)
texture = ExtResource("9_enpl1")

[node name="PawnDark" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2.222, 2.222)
texture = ExtResource("10_05rro")

[node name="KnightDark" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2.222, 2.222)
texture = ExtResource("11_3uwib")

[connection signal="mouse_entered" from="King" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="King" to="." method="_on_texture_rect_mouse_exited"]
[connection signal="gui_input" from="Rook" to="." method="_gui_input"]
[connection signal="mouse_entered" from="Rook" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="Rook" to="." method="_on_texture_rect_mouse_exited"]
[connection signal="mouse_entered" from="Bishop" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="Bishop" to="." method="_on_texture_rect_mouse_exited"]
[connection signal="mouse_entered" from="Pawn" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="Pawn" to="." method="_on_texture_rect_mouse_exited"]
[connection signal="mouse_entered" from="Knight" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="Knight" to="." method="_on_texture_rect_mouse_exited"]
[connection signal="mouse_entered" from="KingDark" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="KingDark" to="." method="_on_texture_rect_mouse_exited"]
[connection signal="gui_input" from="RookDark" to="." method="_gui_input"]
[connection signal="mouse_entered" from="RookDark" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="RookDark" to="." method="_on_texture_rect_mouse_exited"]
[connection signal="mouse_entered" from="BishopDark" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="BishopDark" to="." method="_on_texture_rect_mouse_exited"]
[connection signal="mouse_entered" from="PawnDark" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="PawnDark" to="." method="_on_texture_rect_mouse_exited"]
[connection signal="mouse_entered" from="KnightDark" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="KnightDark" to="." method="_on_texture_rect_mouse_exited"]
